# Uncertainty-Estimation-in-AI-Powered-Digital-Pathology

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  requirements.txt  setup_env.sh
configs/: benchmark_confidence_mc_dropout.yaml  benchmark_trained_checkpoint.yaml  default.yaml  train_small_vit.yaml  uncertainty_lab_default.yaml
data/: download_datasets.py  download_nct_crc.py
experiments/: ensemble_utils.py  evaluate.py  evaluate_cross_domain_ood.py  evaluate_shift_ood.py  evaluate_uncertainty.py  generate_corruption_preview.py  generate_cross_domain_plots.py  generate_report_package.py  generate_thesis_figures.py  run_aleatoric_epistemic.py  run_conformal.py  run_ece_under_shift.py  run_evaluation_pipeline.py  run_shift_comparison.py  run_thesis_bundle.py  train.py
models/: __init__.py  load_model.py
scripts/: docker-entrypoint.sh
thesis/chapters/: own_work.tex
uncertainty_lab/: __init__.py  cli.py  config.py  device.py
uncertainty_lab/data/: __init__.py  csv_dataset.py  factory.py  folder.py  nct_crc.py  pcam.py
uncertainty_lab/metrics/: __init__.py  core.py  plots.py
uncertainty_lab/models/: __init__.py  hf.py  loader.py
uncertainty_lab/pipeline/: __init__.py  run.py  train.py
uncertainty_lab/uncertainty/: __init__.py  base.py  conformal.py
web/: app.py  evaluation_methods.py
web/static/: style.css
web/static/evaluate/: method-confidence.js  method-deep-ensemble.js  method-mc-dropout.js
web/templates/: base.html  dataset.html  evaluate.html  index.html  project.html  run.html  setup.html
(+4 files in other folders)
